--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
-  "manifest_version": 3,
-  "name": "PhishDetector",
-  "description": "Tells a user whether or not their currently open email is likely to be a phishing email",
-  "version": "1.0",
-  "action":{
-      "default_popup": "index.html",
-      "default_title": "PhishDetector"
-  },
-  "host_permissions": [
-    "https://mail.google.com/mail/u/*/#inbox/*"
-  ],
+    "manifest_version": 3,
+    "name": "PhishDetector",
+    "description": "Tells a user whether or not their currently open email is likely to be a phishing email",
+    "version": "1.0",
+    "action":{
+        "default_popup": "index.html",
+        "default_title": "PhishDetector",
+        "default_icon": "images/icon.png"
+    },
+    "permissions": [
+        "activeTab",
+        "scripting"
+    ]
 }
